# mcu

./: README.md
01-blink/: CMakeLists.txt  main.c
02-control/: CMakeLists.txt  main.c
02-control/stdio-task/: stdio-task.c
02-echo/: CMakeLists.txt  main.c
02-printf/: CMakeLists.txt  main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/led-task/: led-task.c
04-bme/: CMakeLists.txt  main.c
05-display/: CMakeLists.txt  disp_image.py  main.c
05-display/led-task/: led-task.h
libs/bme280-driver/: CMakeLists.txt
libs/bme280-driver/include/: bme280-driver.h  bme280-regs.h
libs/bme280-driver/src/: bme280-driver.c
libs/ili9341-driver/: CMakeLists.txt
libs/ili9341-driver/include/: font-jetbrains.h  ili9341-display.h  ili9341-driver.h  ili9341-font.h
libs/ili9341-driver/src/: font-jetbrains.c  ili9341-display.c  ili9341-driver.c  ili9341-font.c
libs/protocol/: CMakeLists.txt
libs/protocol/include/: protocol-task.h
libs/protocol/src/: protocol-task.c
